--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -6,6 +6,7 @@
 
 // base.styl подключается только в том случае, когда спецпроект расположен на отдельной странице
 @import 'base'
+@import 'animations'
 
 $colors = {}
 
@@ -47,7 +48,7 @@ $colors = {}
             background-image linear-gradient(#191919 2px, transparent 2px),
                              linear-gradient(90deg, #191919 2px, transparent 2px),
                              linear-gradient(90deg, #191919 1px, transparent 1px)
-            background-position 0 24px, 15px 24px, 68px 24px
+            background-position 0 24px, 25px 24px, 78px 24px
 
             transition filter .1s
             
@@ -354,7 +355,8 @@ $colors = {}
         
         @media $mq.not_mobile
             left 104px
-            width auto
+            width 480px
+            max-width none
         
         &__text
             display flex
