--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -39,16 +39,16 @@ $colors = {}
 
         &__grid
             position absolute
-            top 0
+            top -10px
             left -10px
             width calc(100% + 20px)
-            height 100%
+            height calc(100% + 20px)
             background-color #000
             background-size 50px 50px, 106px 50px, 106px 50px
             background-image linear-gradient(#191919 2px, transparent 2px),
                              linear-gradient(90deg, #191919 2px, transparent 2px),
                              linear-gradient(90deg, #191919 1px, transparent 1px)
-            background-position 0 24px, 25px 24px, 78px 24px
+            background-position 0 34px, 25px 0, 78px 0
 
             transition filter .1s
             
@@ -57,7 +57,7 @@ $colors = {}
                 transition filter .5s
                 
             @media (min-width 1090px)
-                background-position calc(50% - 53px) 24px, calc(50% - 53px) 24px, center 24px
+                background-position 0 34px, calc(50% - 53px) 0, center 0
                 
     &-container
         padding 0 15px
