--- a/src/css/animations.styl
+++ b/src/css/animations.styl
@@ -10,6 +10,18 @@
         opacity 0
     }
     to {
+        opacity 1
+    }
+}
+
+.fadeInArt
+    animation-name fadeInArt
+
+@keyframes fadeInArt {
+    0% {
+        opacity 0
+    }
+    to {
         // opacity 1
         opacity .25
     }
