min enter on 320 adaptive and fix chrome blur freezes

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -19,8 +19,7 @@ $colors = {}
 
 .VKMusic
     position relative
-    // min-height 604px
-    min-height 560px
+    min-height 540px
     padding-bottom 20px
     font-size 16px
     border 3px solid #6185C2
@@ -29,7 +28,7 @@ $colors = {}
     
     &--result
         padding-bottom 0
-        border-color #333333
+        border-color #333
         
     @media $mq.iphone6
         min-height 600px
@@ -59,6 +58,7 @@ $colors = {}
             
             filter blur(0)
             transform translate3d(0,0,0)
+            -webkit-transform translate3d(0,0,0)
             transition filter .1s linear
             
             will-change filter
@@ -102,6 +102,7 @@ $colors = {}
         
         filter blur(0)
         transform translate3d(0,0,0)
+        -webkit-transform translate3d(0,0,0)
         transition filter .1s linear
         
         will-change filter
@@ -142,6 +143,7 @@ $colors = {}
 
             filter blur(0)
             transform translate3d(0,0,0)
+            -webkit-transform translate3d(0,0,0)
             transition filter .1s linear
             
             will-change filter
@@ -174,7 +176,7 @@ $colors = {}
         position relative
         z-index 1
         max-width 100%
-        padding-top 55px
+        padding-top 52px
         padding-left 26px
         padding-right 10px
         
@@ -202,7 +204,7 @@ $colors = {}
                 font-size 36px
             
         &__subtitle
-            margin-top 11px
+            margin-top 8px
             line-height 1.3em
             color #919191
             
@@ -211,7 +213,7 @@ $colors = {}
                 line-height 1.5em
             
         &__desc
-            margin-top 19px
+            margin-top 12px
             color #fff
             line-height: 1.5em;
 
@@ -256,6 +258,7 @@ $colors = {}
 
         filter blur(0)
         transform translate3d(0,0,0)
+        -webkit-transform translate3d(0,0,0)
         transition filter .1s linear
         
         will-change filter
@@ -637,7 +640,7 @@ $colors = {}
             display flex
             justify-content center
             align-items flex-start
-            min-height 199px
+            min-height 179px
             padding-top 26px
             background-color #000
             
