--- a/src/css/animations.styl
+++ b/src/css/animations.styl
@@ -22,7 +22,6 @@
         opacity 0
     }
     to {
-        // opacity 1
         opacity .25
     }
 }
@@ -37,6 +36,6 @@
     }
     to {
         opacity 1
-        transform none
+        transform translate3d(0, 0, 0)
     }
 }
