--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -57,6 +57,7 @@ $colors = {}
             background-position 0 34px, 25px 0, 78px 0
             
             filter blur(0)
+            -webkit-filter blur(0)
             transform translate3d(0,0,0)
             -webkit-transform translate3d(0,0,0)
             transition filter .1s linear
@@ -65,6 +66,7 @@ $colors = {}
             
             .is-blurred &
                 filter blur(3px)
+                -webkit-filter blur(3px)
                 transition filter .3s linear
                 
             @media (min-width 1090px)
@@ -101,6 +103,7 @@ $colors = {}
         left 0
         
         filter blur(0)
+        -webkit-filter blur(0)
         transform translate3d(0,0,0)
         -webkit-transform translate3d(0,0,0)
         transition filter .1s linear
@@ -109,6 +112,7 @@ $colors = {}
         
         .is-blurred &
             filter blur(2px)
+            -webkit-filter blur(2px)
             transition filter .3s linear
             
         @media $mq.iphone5
@@ -142,6 +146,7 @@ $colors = {}
             opacity .5
 
             filter blur(0)
+            -webkit-filter blur(0)
             transform translate3d(0,0,0)
             -webkit-transform translate3d(0,0,0)
             transition filter .1s linear
@@ -150,6 +155,7 @@ $colors = {}
             
             .is-blurred &
                 filter blur(2px)
+                -webkit-filter blur(2px)
                 transition filter .3s linear
             
             &::before
@@ -260,6 +266,7 @@ $colors = {}
         opacity .5
 
         filter blur(0)
+        -webkit-filter blur(0)
         transform translate3d(0,0,0)
         -webkit-transform translate3d(0,0,0)
         transition filter .1s linear
@@ -271,6 +278,7 @@ $colors = {}
             
         .is-blurred &
             filter blur(6px)
+            -webkit-filter blur(6px)
             transition filter .3s linear
         
         &__line
@@ -410,6 +418,8 @@ $colors = {}
                 height 138px
                 margin-top 0
                 transition margin-top .1s
+                
+                transform translate3d(0,0,0)
 
                 &--a
                     margin-top -26px
