--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -41,7 +41,7 @@ $colors = {}
     &-wrapper
         position relative
         min-height 100vh
-        padding 15px 0
+        padding 24px 0 15px
         overflow hidden
         
         @media $mq.desktop
