--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -20,7 +20,8 @@ $colors = {}
 .VKMusic
     position relative
     // min-height 530px
-    min-height 490px
+    // min-height 490px
+    min-height 420px
     padding-bottom 10px
     font-size 16px
     border 3px solid #6185C2
@@ -203,7 +204,7 @@ $colors = {}
         
         &__title
             color #fff
-            font-size 28px
+            font-size 26px
             font-weight 700
             line-height 1.2em
             
@@ -214,7 +215,7 @@ $colors = {}
                 font-size 36px
             
         &__subtitle
-            margin-top 8px
+            margin-top 4px
             font-size 15px
             line-height 1.3em
             color #919191
@@ -230,8 +231,8 @@ $colors = {}
         &__desc
             margin-top 12px
             color #fff
-            font-size 15px
-            line-height: 1.5em;
+            font-size 14px
+            line-height: 1.3em;
 
             b
                 font-weight 700
@@ -427,9 +428,11 @@ $colors = {}
             display flex
             align-items flex-end
             color #fff
-            line-height 1.5em
+            font-size 14px
+            line-height 1.3em
             
             @media $mq.iphone6
+                font-size 18px
                 line-height 1.75em
 
             @media $mq.not_mobile
@@ -450,21 +453,21 @@ $colors = {}
             display flex
             flex-wrap wrap
             align-items center
-            margin -15px 0 0 -15px
-            padding-top 28px
+            margin -10px 0 0 -10px
+            padding-top 24px
             
             @media $mq.iphone6
                 margin -25px 0 0 -25px
                 padding-top 43px
             
         &__options-item
-            padding 15px 0 0 15px
+            padding 10px 0 0 10px
             
             @media $mq.iphone6
                 padding 25px 0 0 25px
         
         &__option
-            min-width 227px
+            min-width 207px
             height 42px
             color #fff
             font-weight 700
@@ -478,10 +481,11 @@ $colors = {}
                 background-color #fff
             
             @media $mq.iphone6
+                min-width 227px
                 height 52px
             
         &__user-answer
-            margin-top 56px
+            margin-top 36px
             color #FF3333
             font-size 24px
             font-weight 900
@@ -495,7 +499,7 @@ $colors = {}
         &__answer
             margin-top 9px
             color #fff
-            line-height 1.5em
+            line-height 1.3em
             
             @media $mq.iphone6
                 font-size 18px
@@ -591,9 +595,11 @@ $colors = {}
     &-result
         
         &__head
-            min-height 325px
-            padding 26px 20px 0 26px
+            position relative
+            min-height 285px
+            padding 16px 20px 0 26px
             background-color #333333
+            overflow hidden
             
             @media $mq.iphone6
                 min-height 375px
@@ -663,7 +669,7 @@ $colors = {}
             
         &__share
             position relative
-            margin-top 22px
+            margin-top 18px
             // margin-top 50px
                 
             @media $mq.iphone6
@@ -694,8 +700,8 @@ $colors = {}
             display flex
             justify-content center
             align-items flex-start
-            min-height 159px
-            padding-top 26px
+            min-height 129px
+            padding-top 16px
             background-color #000
             
             @media $mq.iphone6
@@ -709,11 +715,14 @@ $colors = {}
 
         &__title
             position relative
-            margin-bottom 19px
+            margin-bottom 9px
             color #fff
             font-weight 700
             line-height 1.5em
             text-align center
+            
+            @media $mq.iphone6
+                margin-bottom 19px
             
         &__icon
             position absolute
@@ -728,8 +737,8 @@ $colors = {}
         
         &__btn
             display block
-            min-width 180px
-            height 45px
+            min-width 150px
+            height 35px
             overflow hidden
             color #fff
             font-size 14px
@@ -750,6 +759,10 @@ $colors = {}
                 
                 &:hover
                     background-color darken(#E8A427, 20)
+                    
+            @media $mq.iphone6
+                min-width 180px
+                height 45px
 
 .likely
 
