change result img adding

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -654,10 +654,12 @@ $colors = {}
         
         &__result
             position relative
+            z-index 1
             color #999999
             
         &__title
             position relative
+            z-index 1
             margin-top 22px
             font-size 28px
             font-weight 700
@@ -669,6 +671,7 @@ $colors = {}
             
         &__subtitle
             position relative
+            z-index 1
             min-height 32px
             margin-top 11px
             color #fff
@@ -678,6 +681,7 @@ $colors = {}
             
         &__share
             position relative
+            z-index 1
             margin-top 18px
             // margin-top 50px
                 
@@ -686,6 +690,7 @@ $colors = {}
             
         &__restart-btn
             position relative
+            z-index 1
             display inline-block
             margin-top 30px
             padding-right 24px
