icons offset from tablet

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -122,6 +122,9 @@ $colors = {}
         @media $mq.iphone5
             display none
         
+        @media $mq.not_mobile
+            left 26px
+        
         &__item
             width 50px
             height 50px
