add offset to question block

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -429,6 +429,9 @@ $colors = {}
             width 480px
             max-width none
         
+        @media $mq.desktop
+            left 156px
+        
         &__text
             display flex
             align-items flex-end
