add offset to question block

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -423,15 +423,13 @@ $colors = {}
             left 52px
             width calc(100% - 62px)
             max-width 480px
-        
+
         @media $mq.not_mobile
-            left 104px
+            // left 104px
+            left 130px
             width 480px
             max-width none
-        
-        @media $mq.desktop
-            left 156px
-        
+
         &__text
             display flex
             align-items flex-end
