--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -21,10 +21,10 @@ $colors = {}
     position relative
     min-height 420px
     padding-bottom 10px
+    margin-bottom 100px
     font-size 16px
     border 3px solid #6185C2
     border-radius 10px
-    overflow hidden
     
     &--result
         padding-bottom 0
@@ -36,6 +36,7 @@ $colors = {}
     @media $mq.not_mobile
         min-height 600px
         padding-bottom 0
+        margin-bottom 0
         font-size 18px
 
     &-wrapper
@@ -108,7 +109,9 @@ $colors = {}
     &-icons
         position absolute
         top 50px
+        bottom 0
         left 0
+        overflow hidden
         
         filter blur(0)
         -webkit-filter blur(0)
@@ -285,6 +288,7 @@ $colors = {}
         left 105px
         right 0
         opacity .5
+        overflow hidden
 
         filter blur(0)
         -webkit-filter blur(0)
@@ -546,7 +550,105 @@ $colors = {}
                 position absolute
                 bottom 115px
                 margin-top 0
+
+    &-comment
+        position absolute
+        z-index 1
+        top calc(100% + 30px)
+        
+        @media $mq.not_mobile
+            top auto
+            bottom 33px
+            right 265px
             
+        @media $mq.desktop
+            right 295px
+        
+        &__avatar
+            width 80px
+            height 80px
+            border 3px solid #6185C2
+            border-radius 100%
+            background-size cover
+            cursor pointer
+        
+        &__name
+            position absolute
+            top 14px
+            left 100%
+            margin-left 18px
+            color #fff
+            font-weight 700
+            line-height 1.5em
+        
+        &__popover
+            position absolute
+            left 48px
+            bottom 100%
+            width 225px
+            margin-bottom 15px
+            padding 13px 30px 20px 17px
+            border-radius 20px
+            background-color #5181B8
+            user-select none
+            
+            &::after
+                content ''
+                position absolute
+                top 100%
+                top calc(100% - 1px)
+                left 26px
+                width 0
+                height 0
+                border-style solid
+                border-width 25px 30px 0 0
+                border-color #5181B8 transparent transparent transparent
+            
+            @media $mq.iphone6
+                width 285px
+        
+        &__text
+            max-height 300px
+            overflow auto
+            color #fff
+            line-height 1.6em
+            
+            & p:not(:last-child)
+                margin-bottom 1.3em
+        
+        &__close
+            position absolute
+            top 10px
+            right 13px
+            width 19px
+            height 19px
+            transform rotate(45deg)
+            cursor pointer
+            transition opacity .2s
+            
+            &::before, &::after
+                content ''
+                position absolute
+                top 0
+                bottom 0
+                left 0
+                right 0
+                margin auto
+                border-radius 10px
+                background-color #9AC0FF
+            
+            &::before
+                width 100%
+                height 3px
+            
+            &::after
+                width 3px
+                height 100%
+                
+            &:hover
+                opacity .4
+
+
     &-audio
         display flex
         align-items center
