fix comment scroll

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -962,5 +962,14 @@ $colors = {}
                 @media $mq.not_mobile
                     margin-right 6px
                     
-    .ps__rail-y
+    .ps:hover .ps__rail-y
+    .ps .ps__rail-y
+        background-color transparent
         opacity 1
+        
+        .ps__thumb-y
+            background-color #9AC0FF
+            opacity .6
+    
+    .ps .ps__rail-y:hover
+        background-color transparent
