fix comment name

--- a/src/css/special.styl
+++ b/src/css/special.styl
@@ -595,12 +595,13 @@ $colors = {}
 
         &__name
             position absolute
-            top 14px
+            top 50%
             left 100%
             margin-left 18px
             color #fff
             font-weight 700
             line-height 1.5em
+            transform translate3d(0, -50%, 0)
         
         &__popover
             display none
